Creacción paquetes Controladores, Repositorios y Modelos

--- a/Seguridad/src/main/resources/application.properties
+++ b/Seguridad/src/main/resources/application.properties
@@ -1,1 +1,3 @@
+#spring.data.mongodb.uri=mongodb+srv://adminDBG2:P9QuySDUXUMjOexJ@clusterminticc4ag2.jjf78zj.mongodb.net/db-registraduria-g2?retryWrites=true&w=majority,
+#spring.data.mongodb.database=db-registraduria-g2
 
